# TermLabGeneralAlgebra--21-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_widgets.cpp
glew/: Makefile  glew.pc
glew/auto/src/: glew_head.c  glew_head.h  glew_tail.h  glewinfo_tail.c
glew/src/: glew.c  glewinfo.c  visualinfo.c
glfw/: CMakeLists.txt
glfw/examples/: boing.c  gears.c  heightmap.c  offscreen.c  particles.c  simple.c  splitview.c  wave.c
glfw/include/GLFW/: glfw3.h  glfw3native.h
glfw/src/: cocoa_init.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_window.m  context.c  egl_context.c  egl_context.h  glx_context.c  glx_context.h  init.c  input.c  internal.h  linux_joystick.c  linux_joystick.h  mappings.h  mappings.h.in  monitor.c  nsgl_context.h  nsgl_context.m  null_init.c  null_joystick.c  null_joystick.h  null_monitor.c  null_platform.h  null_window.c  osmesa_context.c  osmesa_context.h  posix_thread.c  posix_thread.h  posix_time.c  posix_time.h  vulkan.c  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  win32_joystick.h  (+16 more)
glfw/tests/: clipboard.c  glfwinfo.c  icon.c  inputlag.c  reopen.c  threads.c  triangle-vulkan.c
headers/GUI/: Windows.h
headers/GUI/algorithms/: Algorithm.h  DivisionAlgorithm.h  EuclidAlgorithm.h  FieldPolynomialAdditionAlgorithm.h  FieldPolynomialDivisionAlgorithm.h  FieldPolynomialFastPoweringAlgorithm.h  FieldPolynomialMultiplicationAlgorithm.h  FieldPolynomialSubtractionAlgorithm.h  GcdAlgorithm.h  GroupElementOrderAlgorithm.h  InverseAlgorithm.h  IsGroupGeneratorAlgorithm.h  MillerRabinTestAlgorithm.h  NaiveFactorizationAlgorithm.h  NumberAdditionAlgorithm.h  NumberDivisionAlgorithm.h  NumberGCDAlgorithm.h  NumberMultiplicationAlgorithm.h  NumberRemainderAlgorithm.h  NumberSqrtAlgorithm.h  NumberSubtractionAlgorithm.h  PollardAlgorithm.h  PolynomialAdditionAlgorithm.h  PolynomialDerivativeAlgorithm.h  PolynomialGeneratorCheckAlgorithm.h  PolynomialMultiplicationAlgorithm.h  PolynomialSubtractionAlgorithm.h  PolynomialValueAlgorithm.h  RemainderAlgorithm.h  RingPolynomialAdditionAlgorithm.h  RingPolynomialFastPoweringAlgorithm.h  RingPolynomialMultiplicationAlgorithm.h  RingPolynomialSubtractionAlgorithm.h  VectorMultiplicationAlgorithm.h
headers/GUI/inputComponents/: BigIntInputComponent.h  FieldPolynomialInputComponent.h  InputComponent.h  IntInputComponent.h  NumberInputComponent.h  NumberSetInputComponent.h  PolynomialInputComponent.h  RawPolynomialInputComponent.h  RingPolynomialInputComponent.h  VectorInputComponent.h
headers/algorithms/: DiscreteLogarithm.h  Division.h  Euclid.h  Gcd.h  GroupElementOrder.h  Inverse.h  IrreducibilityCheck.h  IsGroupGenerator.h  MillerRabinTest.h  Naive.h  NaiveFactorization.h  NumberAddition.h  NumberDivision.h  NumberGCD.h  NumberMultiplication.h  NumberRemainder.h  NumberSqrt.h  NumberSubtraction.h  Pollard.h  PolynomialAddition.h  PolynomialDerivative.h  PolynomialDivision.h  PolynomialFastPowering.h  PolynomialGenerateorCheck.h  PolynomialGeneratorCheck.h  PolynomialIrreducible.h  PolynomialMultiplication.h  PolynomialRemainder.h  PolynomialSubtraction.h  PolynomialValue.h  Remainder.h  RingPolynomialAddition.h  RingPolynomialMultiplication.h  RingPolynomialSubtraction.h  Truedivision  VectorMultiplication.h  mod_divide.h  mod_inverse.h
headers/utils/: BigInt.h  BigInteger.h  Bool.h  EuclidResult.h  FieldPolynomial.h  Float.h  Int.h  IsGenerator.h  Long.h  Number.h  NumberFactors.h  NumberSet.h  Object.h  Parser.h  Polynomial.h  PolynomialTerm.h  PreprocessorMainDirectives.h  RawPolynomial.h  RingPolynomial.h  Vector.h
sources/GUI/: Windows.cpp
sources/GUI/algorithms/: DivisionAlgorithm.cpp  EuclidAlgorithm.cpp  FieldPolynomialAdditionAlgorithm.cpp  FieldPolynomialDivisionAlgorithm.cpp  FieldPolynomialFastPoweringAlgorithm.cpp  FieldPolynomialMultiplicationAlgorithm.cpp  FieldPolynomialSubtractionAlgorithm.cpp  GcdAlgorithm.cpp  GroupElementOrderAlgorithm.cpp  InverseAlgorithm.cpp  IsGroupGeneratorAlgorithm.cpp  MillerRabinTestAlgorithm.cpp  NaiveFactorizationAlgorithm.cpp  NumberAddition.cpp  NumberAdditionAlgorithm.cpp  NumberDivisionAlgorithm.cpp  NumberGCDAlgorithm.cpp  NumberMultiplication.cpp  NumberMultiplicationAlgorithm.cpp  NumberRemainderAlgorithm.cpp  NumberSqrtAlgorithm.cpp  NumberSubtraction.cpp  NumberSubtractionAlgorithm.cpp  PollardAlgorithm.cpp  PolynomialAdditionAlgorithm.cpp  PolynomialDerivativeAlgorithm.cpp  PolynomialValueAlgroithm.cpp  (+11 more)
sources/algorithm /: Truedivisio.cpp
sources/algorithms/:  PolynomialGenerateorCheck.cpp  CyclotomicPolynomial.cpp  DiscreteLogarithm.cpp  Division.cpp  Euclid.cpp  EuclidAlgorithm.cpp  FastExponentationMontgomery.cpp  Gcd.cpp  GroupElementOrder.cpp  Inverse.cpp  IrreducibilityCheck.cpp  IsGroupGenerator.cpp  MillerRabinTest.cpp  Naive.cpp  NaiveFactorization.cpp  NumberAddition.cpp  NumberDivision.cpp  NumberGCD.cpp  NumberMultiplication.cpp  NumberRemainder.cpp  NumberSqrt.cpp  NumberSqrtAlgorithm.cpp  NumberSubtraction.cpp  Pollard.cpp  PollardAlgorithm.cpp  PolynomialAddition.cpp  PolynomialDerivative.cpp  PolynomialGeneratorCheck.cpp  PolynomialIrreducible.cpp  PolynomialMultiplication.cpp  PolynomialSubtraction.cpp  PolynomialValue.cpp  Remainder.cpp  RingPolynomialAddition.cpp  RingPolynomialMultiplication.cpp  RingPolynomialSubtraction.cpp  Truedivision.cpp  VectorMultiplication.cpp
sources/utils/: BigInt.cpp  Bool.cpp  EuclidResult.cpp  FieldPolynomial.cpp  Float.cpp  Int.cpp  IsGenerator.cpp  Long.cpp  Number.cpp  NumberFactors.cpp  NumberSet.cpp  Parser.cpp  Polynomial.cpp  PolynomialTerm.cpp  RawPolynomial.cpp  RingPolynomial.cpp  Vector.cpp
test/: test_task3.cpp
tests/: DiscreteLogarithmTests.cpp  FieldPolynomialMultiplication.cpp  FieldPolynomialsAdditionTests.cpp  FieldPolynomialsSubtractionTests.cpp  GcdTests.cpp  IrreducibilityCheckTests.cpp  MillerRabinTestTests.cpp  NaiveFactorizationTests.cpp  PollardFactorizationTests.cpp
(+15 files in other folders)
